Fixes styles contrast

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -10,7 +10,7 @@ $module-background:#f8f8f8;
 $page-background: #f2f2f2;
 $table-background: #f4f4f4;
 $modal-color: $brand-orange;
-$document-blue: #386E8E;
+$document-blue: #466577;
 $hover-background: #F5F5F5;
 
 // Secondary Colors (づ ￣ ³￣)づ
@@ -29,7 +29,7 @@ $table-border: #D7E4E7;
 
 $dark-orange:#F88630;
 
-$heading-bg: $document-blue;
+$heading-bg: #466577;
 $header-hover: #8AABC0;
 $input-alt-bg: #96afc3;
 $input-alt: white;
