--- a/assets/css/components/WorkflowList.scss
+++ b/assets/css/components/WorkflowList.scss
@@ -5,39 +5,39 @@
 
   a { text-decoration: none; }
 
-  // .lesson-banner { not in use May 18 2019 PFC
-  //   width:32rem;
-  //   height:10rem;
-  //   border:3px solid $brand-learn;
-  //   color:$brand-learn;
-  //   background-color: $brand-learn--Vlight;
-  //   border-radius: 15px;
-  //   display: block;
-  //   margin:4rem;
-  //   padding:1.5rem;
-  //   display: none;
-  //
-  //   &:hover {
-  //     background-color: $brand-learn--light;
-  //   }
-  //   &:active {
-  //     background-color: $brand-learn--med-light;
-  //   }
-  //
-  //   .content-1 {
-  //     margin-bottom: .2rem;
-  //   }
-  //
-  //   .icon-star {
-  //     font-size: 2.2rem;
-  //     margin-right: .5rem;
-  //   }
-  //
-  //   p {
-  //     @include content-1;
-  //     margin-top: .5rem;
-  //   }
-  // }
+  .lesson-banner {
+    width:32rem;
+    height:10rem;
+    border:3px solid $brand-learn;
+    color:$brand-learn;
+    background-color: $brand-learn--Vlight;
+    border-radius: 15px;
+    display: block;
+    margin:4rem;
+    padding:1.5rem;
+    display: none;
+
+    &:hover {
+      background-color: $brand-learn--light;
+    }
+    &:active {
+      background-color: $brand-learn--med-light;
+    }
+
+    .content-1 {
+      margin-bottom: .2rem;
+    }
+
+    .icon-star {
+      font-size: 2.2rem;
+      margin-right: .5rem;
+    }
+
+    p {
+      @include content-1;
+      margin-top: .5rem;
+    }
+  }
 
   .button-blue:hover {
     background-color: $light-accent--strong;
